# dimos

./: pyproject.toml
.github/workflows/: ci.yml
dimos/control/examples/: cartesian_ik_jogger.py
dimos/core/: global_config.py  native_module.py  test_native_module.py
dimos/core/coordination/: module_coordinator.py
dimos/hardware/manipulators/a750/: adapter.py
dimos/manipulation/: pick_and_place_module.py
dimos/mapping/ray_tracing/: test_voxel_map.py  voxel_map.py  voxel_map.pyi
dimos/mapping/ray_tracing/rust/: Cargo.toml
dimos/mapping/ray_tracing/rust/src/: lib.rs  main.rs  python.rs  voxel_ray_tracer.rs
dimos/msgs/sensor_msgs/: Image.py
dimos/msgs/vision_msgs/: Detection3D.py  Detection3DArray.py  test_detection3d_rerun.py
dimos/navigation/nav_3d/mls_planner/: mls_planner.py  mls_planner.pyi  test_mls_planner.py
dimos/navigation/nav_3d/mls_planner/rust/: Cargo.toml
dimos/navigation/nav_3d/mls_planner/rust/src/: lib.rs  main.rs  mls_planner.rs  python.rs
dimos/perception/detection/type/detection3d/: bbox.py  imageDetections3D.py  marker.py  test_imageDetections3D.py  test_marker.py
dimos/perception/fiducial/: marker_detect.py  marker_detection_stream_module.py  marker_pose.py  marker_tf_module.py  marker_transformer.py  test_fixture_verification.py  test_helpers.py  test_marker_detection_stream_module.py  test_marker_pose.py  test_marker_tf_integration.py  test_marker_tf_module.py  test_marker_transformer.py
dimos/perception/fiducial/blueprints/: desk_marker_tf.py  test_desk_marker_tf.py
dimos/robot/: all_blueprints.py  test_all_blueprints.py
dimos/robot/catalog/: a750.py
dimos/robot/manipulators/a750/: blueprints.py
dimos/robot/unitree/go2/blueprints/smart/: test_unitree_go2_markers.py  unitree_go2.py
dimos/teleop/keyboard/: keyboard_teleop_module.py
dimos/teleop/quest/: blueprints.py  quest_extensions.py  quest_teleop_module.py
dimos/teleop/quest/web/static/: index.html  teleop.css  teleop.js
dimos/visualization/rerun/: test_detection3d_bridge.py
docs/capabilities/manipulation/: a750.md  readme.md
examples/native-modules/rust/: Cargo.toml
examples/native-modules/rust/src/: native_ping.rs
native/rust/dimos-module/: Cargo.toml
native/rust/dimos-module/src/: lib.rs  log.rs  module.rs
