[build-system]
requires = ["setuptools>=70", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Data files (yaml/json/urdf/html/...) are attached to the top-level `dimos`
# package via [tool.setuptools.package-data] below. They are keyed to `dimos`
# (not the data file's own subpackage) and use recursive `**` globs on
# purpose: this is relative-path based and does NOT depend on every data dir
# having an __init__.py / being discovered as a package. The repo has no
# __init__.py files, so include-package-data / per-subpackage globs map data
# into the wheel only nondeterministically (this is how dimos/models/
# segmentation/configs/edgetam.yaml went missing). MANIFEST.in still governs
# the sdist; keep its recursive-include extension list in sync with the globs
# here.
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["dimos*"]
# Web frontends / vendored node_modules: not part of the Python runtime
# (MANIFEST.in already prunes these from the sdist; this keeps their stray
# .py modules out of the wheel too).
exclude = [
    "dimos.web.websocket_vis.node_modules*",
    "dimos.web.command-center-extension*",
    "dimos.web.dimos_interface*",
]

[tool.setuptools.package-data]
# Recursive: matches the extension anywhere under dimos/. Add a line when code
# starts loading a new data type. NOTE: ".txt" is intentionally scoped (a bare
# "**/*.txt" would grab CMakeLists.txt from native build dirs).
"dimos" = [
    "**/*.yaml",
    "**/*.yml",
    "**/*.json",
    "**/*.urdf",
    "**/*.html",
    "**/*.css",
    "**/*.js",
    "**/*.tcss",
    "rxpy_backpressure/*.txt",
]

[tool.setuptools.exclude-package-data]
# Trims data the recursive globs above would otherwise pull in: test fixtures
# and the native (C++/nix) build tree, which is built separately.
"dimos" = [
    "agents/fixtures/**",
    "agents/mcp/fixtures/**",
    "mapping/google_maps/fixtures/**",
    "web/command-center-extension/**",
    "web/websocket_vis/node_modules/**",
    "web/dimos_interface/**",
    "hardware/sensors/lidar/fastlio2/cpp/**",
]

[project]
name = "dimos"
authors = [
    {name = "Dimensional Team", email = "build@dimensionalOS.com"},
]
version = "0.0.12"
description = "Powering agentive generalist robotics"
requires-python = ">=3.10"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache-2.0"}
keywords = ["robotics", "ros", "agents", "dimos", "dimensional", "openclaw", "roboclaw", "humanoid", "unitree"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

dependencies = [
    # Transport Protocols
    "dimos-lcm",
    "PyTurboJPEG==1.8.2",
    # Core
    "numpy>=1.26.4",
    "scipy>=1.15.1",
    "pin>=3.3.0", # Pinocchio IK library
    "reactivex",
    "sortedcontainers==2.4.0",
    "pydantic",
    "python-dotenv",
    "typing_extensions>=4.0; python_version < '3.11'",
    "annotation-protocol>=1.4.0",
    "lazy_loader",
    "plum-dispatch==2.5.7",
    # Logging
    "structlog>=25.5.0,<26",
    "colorlog==6.9.0",
    # Core Msgs
    "opencv-python",
    "open3d-unofficial-arm>=0.19.0.post9; platform_system == 'Linux' and platform_machine == 'aarch64'",
    "open3d>=0.18.0; platform_system != 'Linux' or platform_machine != 'aarch64'",
    # CLI
    "pydantic-settings>=2.11.0,<3",
    "textual==3.7.1",
    "terminaltexteffects==0.12.2",
    "typer>=0.19.2,<1",
    "plotext==5.3.2",
    # Used for calculating the occupancy map.
    "numba>=0.60.0", # First version supporting Python 3.12
    "llvmlite>=0.42.0", # Required by numba 0.60+
    # TODO: rerun shouldn't be required but rn its in core (there is NO WAY to use dimos without rerun rn)
    # remove this once rerun is optional in core
    "rerun-sdk==0.32.0a1",
    "dimos-viewer==0.32.0a1",
    "toolz>=1.1.0",
    "protobuf>=6.33.5,<7",
    "psutil>=7.0.0",
    "sqlite-vec>=0.1.6",
    "lz4>=4.4.5",
    "bleak>=3.0.2",
    "cryptography>=46.0.5",
]


[project.scripts]
lcmspy = "dimos.utils.cli.lcmspy.run_lcmspy:main"
agentspy = "dimos.utils.cli.agentspy.agentspy:main"
humancli = "dimos.utils.cli.human.humanclianim:main"
dimos = "dimos.robot.cli.dimos:cli_main"
rerun-bridge = "dimos.visualization.rerun.bridge:app"
doclinks = "dimos.utils.docs.doclinks:main"
dtop = "dimos.utils.cli.dtop:main"

[project.urls]
Homepage = "https://dimensionalos.com"
Repository = "https://github.com/dimensionalOS/dimos"
Issues = "https://github.com/dimensionalOS/dimos/issues"
Changelog = "https://github.com/dimensionalOS/dimos/releases"

[project.optional-dependencies]
misc = [
    # Core requirements
    "cerebras-cloud-sdk",
    "yapf==0.40.2",
    "typeguard",
    "empy==3.3.4",
    "catkin_pkg",
    "lark",
    "tiktoken>=0.8.0",
    "python-multipart>=0.0.27",
    "tensorzero==2025.7.5",

    # Developer Specific
    "ipykernel",

    # Vector Embedding
    "sentence_transformers",

    # Perception Dependencies
    "scikit-learn",
    "timm>=1.0.15",
    "edgetam-dimos",

    # embedding models
    "open_clip_torch==3.2.0",
    "torchreid==0.2.5",
    "gdown>=5.2.2",
    "tensorboard==2.20.0",

    # Mapping
    "googlemaps>=4.10.0",

    # Inference
    "onnx",
    "einops==0.8.1",

    # Hardware SDKs
    "xarm-python-sdk>=1.17.0",
    "portal",
]

visualization = [
    "rerun-sdk==0.32.0a1",
    "dimos-viewer==0.32.0a1",
]

agents = [
    "langchain>=1.2.3,<2",
    "langchain-chroma>=1,<2",
    "langchain-core>=1.2.22,<2",
    "langchain-openai>=1,<2",
    "langchain-text-splitters>=1,<2",
    "langchain-huggingface>=1,<2",
    "langchain-ollama>=1,<2",
    "ollama>=0.6.0",
    "anthropic>=0.19.0",

    # Audio
    "openai",
    "sounddevice",
    "faster-whisper>=1.0.0",
]

web = [
    "fastapi>=0.115.6",
    "sse-starlette>=2.2.1",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.6",
    "ffmpeg-python",
    "soundfile",
]

perception = [
    "ultralytics>=8.3.70",
    "filterpy>=1.4.5",
    "Pillow",
    "lap>=0.5.12",
    "transformers[torch]>=4.53.0,<4.54",
    "moondream",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
]

unitree = [
    "dimos[base,mapping]",
    "unitree-webrtc-connect-leshy>=2.0.7",
]

unitree-dds = [
    "dimos[unitree]",
    "unitree-sdk2py-dimos>=1.0.2",
    "cyclonedds>=0.10.5",
]

manipulation = [
    # Planning (Drake)
    "drake==1.45.0; sys_platform == 'darwin' and platform_machine != 'aarch64'",
    "drake>=1.40.0; sys_platform != 'darwin' and platform_machine != 'aarch64'",

    # Hardware SDKs
    "piper-sdk",
    "pyrealsense2; sys_platform != 'darwin'",
    "xarm-python-sdk>=1.17.0",
    "a750-control; sys_platform == 'linux' and platform_machine == 'x86_64'",

    # Mesh conversion (STL/DAE → OBJ for Drake collision geometry)
    "trimesh",
    "pycollada",

    # Visualization (Optional)
    "kaleido>=0.2.1",
    "plotly>=5.9.0",
    "xacro",

    # Other
    "matplotlib>=3.7.1",
    "pyyaml>=6.0",
]


cpu = [
    # CPU inference backends
    "onnxruntime",
    "ctransformers==0.2.27",
]

cuda = [
    "cupy-cuda12x==13.6.0; platform_machine == 'x86_64'",
    "nvidia-nvimgcodec-cu12[all]; platform_machine == 'x86_64'",
    "onnxruntime-gpu>=1.17.1; platform_machine == 'x86_64'", # Only versions supporting both cuda11 and cuda12
    "ctransformers[cuda]==0.2.27; sys_platform != 'darwin'",
    "xformers>=0.0.20; platform_machine == 'x86_64'",
]

psql = [
    "psycopg2-binary>=2.9.11"
]

sim = [
    # Simulation
    "mujoco>=3.3.4",
    "playground>=0.0.5",
    "pygame>=2.6.1",
]

mapping = [
    # PGO for reloc premap + nav_stack experiments
    # Jeff's https://github.com/jeff-hykin/gtsam-extended
    "gtsam-extended>=4.3a1.post1",
]

# NOTE: jetson-jp6-cuda126 extra is disabled due to 404 errors from wheel URLs
# The pypi.jetson-ai-lab.io URLs are currently unavailable. Update with working URLs when available.
# jetson-jp6-cuda126 = [
#     # Jetson Jetpack 6.2 with CUDA 12.6 specific wheels (aarch64 Linux only)
#     "torch @ https://pypi.jetson-ai-lab.io/jp6/cu126/+f/.../torch-2.8.0-cp310-cp310-linux_aarch64.whl ; platform_machine == 'aarch64' and sys_platform == 'linux'",
#     "torchvision @ https://pypi.jetson-ai-lab.io/jp6/cu126/+f/.../torchvision-0.23.0-cp310-cp310-linux_aarch64.whl ; platform_machine == 'aarch64' and sys_platform == 'linux'",
#     "onnxruntime-gpu @ https://pypi.jetson-ai-lab.io/jp6/cu126/+f/.../onnxruntime_gpu-1.23.0-cp310-cp310-linux_aarch64.whl ; platform_machine == 'aarch64' and sys_platform == 'linux'",
#     "xformers @ https://pypi.jetson-ai-lab.io/jp6/cu126/+f/.../xformers-0.0.33-cp39-abi3-linux_aarch64.whl ; platform_machine == 'aarch64' and sys_platform == 'linux'",
# ]

drone = [
    "pymavlink"
]

dds = [
    "cyclonedds>=0.10.5",
]

# Minimal dependencies for Docker modules that communicate with the DimOS host
docker = [
    "dimos-lcm",
    "numpy>=1.26.4",
    "scipy>=1.15.1",
    "reactivex",
    "plum-dispatch==2.5.7",
    "structlog>=25.5.0,<26",
    "pydantic",
    "pydantic-settings>=2.11.0,<3",
    "typer>=0.19.2,<1",
    "requests>=2.28",
    "opencv-python-headless",
    "lcm",
    "sortedcontainers",
    "PyTurboJPEG",
    "rerun-sdk",
    "open3d-unofficial-arm>=0.19.0.post9; platform_system == 'Linux' and platform_machine == 'aarch64'",
    "open3d>=0.18.0; platform_system != 'Linux' or platform_machine != 'aarch64'",
]

base = [
    "dimos[agents,web,perception,visualization]",
]

# All extras except dds and unitree-dds (which require special system setup).
apriltag = [
    "opencv-contrib-python==4.10.0.84",
    "reportlab>=4.5.0",
]

all = [
    "dimos[agents,apriltag,base,cpu,cuda,docker,drone,manipulation,misc,perception,psql,sim,unitree,visualization,web]",
]

[dependency-groups]
# For autofix.yml
autofix = ["ruff==0.14.3"]

# Project deps shared by `tests` and `lint`.
project-deps = [
    "dimos[web,visualization]",
    "torch",
    "langchain==1.2.3",
    "langchain-core==1.3.3",
    "googlemaps>=4.10.0",
    "transformers[torch]==4.53.3",
    "ultralytics>=8.3.70",
    "hydra-core>=1.3.0",
    "open_clip_torch==3.2.0",
    "openai",
    "moondream",
    "torchreid==0.2.5",
    "gdown==6.0.0",
    "tensorboard==2.20.0",
    "xacro",
    "lap>=0.5.12",
    "langchain-openai>=1,<2",
    "ollama>=0.6.0",
]

tests = [
    # Test runner
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-mock==3.15.0",
    "pytest-env==1.1.5",
    "pytest-timeout==2.4.0",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=5.0",
    "pytest-error-for-skips>=2.0.2",
    "coverage>=7.0",
    "requests-mock==1.12.1",

    # Misc dev tools
    "pre_commit==4.2.0",
    "watchdog>=3.0.0",
    "md-babel-py>=1.2.0",
    "py-spy",

    # LSP
    "python-lsp-server[all]==1.14.0",
    "python-lsp-ruff==2.3.0",

    # Deps the lint job swaps for stubs (`stubs/<pkg>/` or `types-*`):
    # the real packages are needed at test time, stubs cover mypy.
    "dimos[apriltag,psql,drone,cpu]",
    "mujoco>=3.3.4",
    "pygame>=2.6.1",
    "python-can>=4",
    "langchain-chroma>=1,<2",
    "unitree-webrtc-connect-leshy>=2.0.7",

    {include-group = "project-deps"},
]

# Lint / format / type-check tooling for the dedicated `lint` CI job.
lint = [
    # Lint / format / type-check
    "ruff==0.14.3",
    "mypy==1.19.0",

    "aiortc>=1.14.0",
    "anthropic>=0.19.0",
    "ipython",
    "openai-whisper",
    "pytest==8.3.5",
    "python-can>=4",
    "python-socketio>=5.16.1",
    "sounddevice>=0.5.5",
    "trimesh>=4.12",
    "watchdog>=3.0.0",

    "pandas-stubs>=2.3.2.250926,<3",
    "types-pyaudio",
    "types-psycopg2>=2.9.21.20251012",
    "types-PyYAML>=6.0.12.20250915,<7",
    "types-reportlab>=4.5.0",
    "types-requests>=2.32.4.20260107,<3",

    {include-group = "project-deps"},
]

# Full CI test group for the self-hosted runner. Inherits `tests` and adds
# the heavy ML/perception/sim extras needed for self_hosted-marked tests (LFS,
# GPU, ROS-dependent integration tests, simulation).
tests-self-hosted = [
    {include-group = "tests"},
    "dimos[agents,perception,manipulation,sim,unitree,misc]",
    # Needed to compile the in-tree extensions.
    "pybind11>=2.12",
]

[tool.uv]
required-version = ">=0.9.17"
default-groups = ["tests"]
exclude-newer = "7 days"
exclude-newer-package = { dimos-viewer = false }
override-dependencies = [
    # moondream pins pillow<11 but we need >=12.2.0 for security fixes
    # (CVE-2026-25990, CVE-2026-40192, CVE-2026-42311).
    "pillow>=12.2.0",
    "pytest==8.3.5", # because gtsam screwed up their dev dependencies
    # langgraph-prebuilt>=1.0.9 imports ExecutionInfo from langgraph.runtime,
    # which only exists in langgraph>=1.1; langchain==1.2.3 caps langgraph<1.1.
    "langgraph-prebuilt<=1.0.8",
    # opentelemetry-api>=1.39 requires importlib-metadata<8.8; without this cap
    # uv picks importlib-metadata>=9 and cascades the otel stack down to 1.11.1,
    # whose stale _pb2.py files crash with protobuf>=6.
    "importlib-metadata<8.8.0",
]

[tool.ruff]
line-length = 100
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "libs",
    "external",
    "src"
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
extend-select = ["E", "W", "F", "B", "UP", "N", "I", "C90", "A", "RUF", "TCH"]
ignore = [
    # TODO: All of these should be fixed, but it's easier commit autofixes first
    "A001", "A002", "B008", "B017", "B019", "B024", "B026", "B904", "C901", "E402", "E501", "E721", "E722", "E741", "F811", "F821", "F821", "F821", "N801", "N802", "N803", "N806", "N817", "N999", "RUF003", "RUF009", "RUF012", "RUF034", "RUF043", "RUF059", "UP007",
    # This breaks runtime type checking (both for us, and users introspecting our APIs)
    "TC001", "TC002", "TC003"
]

[tool.ruff.lint.per-file-ignores]
"dimos/models/Detic/*" = ["ALL"]
# Naming needs to match the actual libraries.
"stubs/*.pyi" = ["N801", "N802", "N803", "N815", "N816", "N818"]

[tool.ruff.lint.isort]
known-first-party = ["dimos"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["dimos.core.module.Module"]

[tool.mypy]
files = ["dimos/"]
mypy_path = "stubs/"
python_version = "3.12"
incremental = true
strict = true
warn_unused_ignores = false
explicit_package_bases = true
exclude = "^dimos/models/Detic(/|$)|^dimos/rxpy_backpressure(/|$)|.*/test_.|.*/conftest.py*"

[[tool.mypy.overrides]]
module = [
    "annotation_protocol",
    "a750_control",
    "a750_control.*",
    "cyclonedds",
    "cyclonedds.*",
    "dimos_lcm.*",
    "etils",
    "faster_whisper",
    "geometry_msgs.*",
    "lazy_loader",
    "mujoco",
    "mujoco_playground.*",
    "nav_msgs.*",
    "open_clip",
    "pinocchio",
    "piper_sdk.*",
    "plotext",
    "plum.*",
    "portal",
    "psutil",
    "pycuda",
    "pycuda.*",
    "pydrake",
    "pydrake.*",
    "pyzed",
    "pyzed.*",
    "rclpy.*",
    "reportlab",
    "reportlab.*",
    "sam2.*",
    "scipy",
    "scipy.*",
    "sensor_msgs.*",
    "sqlite_vec",
    "std_msgs.*",
    "tf2_msgs.*",
    "transformers",
    "transformers.*",
    "torchreid",
    "turbojpeg",
    "ultralytics.*",
    "unitree_sdk2py.*",
    "unitree_webrtc_connect.*",
    "websocket",
    "xarm.*",
    "ament_index_python.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["dimos.rxpy_backpressure", "dimos.rxpy_backpressure.*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["pydrake", "pydrake.*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["transformers", "transformers.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["dimos"]
env = [
  "GOOGLE_MAPS_API_KEY=AIzafake_google_key",
  "PYTHONWARNINGS=ignore:cupyx.jit.rawkernel is experimental:FutureWarning",
]
addopts = "--dist=loadfile --durations=10 --timeout=600 --timeout-method=thread -v -ra --showlocals --cov-report=xml -p no:launch_testing -p no:launch_ros --import-mode=importlib --color=yes -m 'not (tool or self_hosted or mujoco or dimsim)'"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["dimos"]
concurrency = ["multiprocessing", "thread"]

[tool.coverage.report]
exclude_also = [
  'if TYPE_CHECKING',
  'assert False',
  ': \.\.\.(\s*#.*)?$',
  '^ +\.\.\.$',
  'pytest.fail\('
]

[tool.largefiles]
max_size_kb = 50
ignore = [
    "uv.lock",
    "*/package-lock.json",
    "dimos/dashboard/dimos.rbl",
    "dimos/web/dimos_interface/themes.json",
    "dimos/manipulation/manipulation_module.py",
    "dimos/navigation/nav_stack/modules/*/main.cpp",
    "dimos/navigation/nav_stack/common/*.hpp",
]
