[package]
name = "dimos-voxel-ray-tracing"
version = "0.1.0"
edition = "2021"
description = "Native Rust voxel-map module with raycast clearing for dimos"
license = "Apache-2.0"

[[bin]]
name = "voxel_ray_tracing"
path = "src/main.rs"

[dependencies]
dimos-module = { path = "../../../../native/rust/dimos-module" }
lcm-msgs = { git = "https://github.com/dimensionalOS/dimos-lcm.git", branch = "rust-codegen" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
ahash = "0.8"
tracing = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
